--- a/Onion.Web/appsettings.json
+++ b/Onion.Web/appsettings.json
@@ -3,15 +3,10 @@
     "onionDataConnection": "DataSource=onionData.db",
     "onionAuthConnection": "DataSource=onionAuth.db"
   },
-  "CorsPolicy": {
-    "name":"OnionCorsPolicyName"
-  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
   }
 }
