Increased version number for rendered NuGet file

--- a/OnionArch.nuspec
+++ b/OnionArch.nuspec
@@ -2,7 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>OnionArch.Mvc</id>
-    <version>0.0.1</version>
+    <title>OnionArch.Mvc</title>
+    <version>0.0.2</version>
     <iconUrl>https://raw.githubusercontent.com/GaProgMan/OnionArch/master/onionArch-nuget-logo.png</iconUrl>
     <description>
       ASP.NET Core MVC using the onion architecture and feature folders
