--- a/Onion.Web/Onion.Web.csproj
+++ b/Onion.Web/Onion.Web.csproj
@@ -8,9 +8,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" PrivateAssets="All" />
+    <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
+
+    <PackageReference Include="ClacksMiddlware" version="2.0.*" />
+    <PackageReference Include="OwaspHeaders.Core" version="3.3.1" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
