--- a/OnionArch.nuspec
+++ b/OnionArch.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>OnionArch.Mvc</id>
     <title>OnionArch.Mvc</title>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
     <iconUrl>https://raw.githubusercontent.com/GaProgMan/OnionArch/master/onionArch-nuget-logo.png</iconUrl>
     <description>
       ASP.NET Core MVC using the onion architecture and feature folders
@@ -20,12 +20,12 @@
   </metadata>
   <files>
     <file src="template.config/*" target="src/.template.config" />
-    <file src="Onion.*/**" target="src" />
+    <file src="Onion.*/**" exclude="Onion.*/obj/**" target="src" />
     <file src="OnionArch.sln" target="src" />
     <file src="README.md" target="src" />
     <file src=".idea/**" exclude="*" />
     <file src=".git/**" exclude="*"/>
     <file src="./**" exclude="*.png" />
-    <file src="./**" exclude="*.svg" />
+    <file src="./**" exclude="*.svg" />  
   </files>
 </package>
